--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
+  "private": true,
   "scripts": {
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-minimizer-webpack-plugin": "^4.2.0",
     "html-minimizer-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-tags-plugin": "^3.0.2",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "kaboom": "^2000.2.9"
   }
 }
