dev/prod differentiation between start and build

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack"
+    "start": "webpack serve --open --mode=development",
+    "build": "webpack --mode=production"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
